--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^9.30.1",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0"
   }
